--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,37 @@
 	0% { transform: translateX(100%); }
 	100% { transform: translateX(-100%); }
 }
+
+.rotating-disk {
+	animation: spin 20s linear infinite;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.center-circle {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 40px;
+	height: 40px;
+	background-color: #1a202c;
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.smaller-white-circle {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 5px;
+	height: 5px;
+	background-color: white;
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
